[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/game elements/OxygenStation.png" type="Texture" id=1]
[ext_resource path="res://scripts/OxygenStation.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.57205, 8 )

[node name="OxygenStation" type="Node2D"]
script = ExtResource( 2 )

[node name="OxygenStationSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SnapPoint" type="Node2D" parent="."]
position = Vector2( 8, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, 8 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
